<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_marginEnd="40dp"
    android:layout_marginStart="40dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_marginEnd="25dp"
        app:cardCornerRadius="10dp"
        android:layout_marginBottom="20dp"

        app:cardBackgroundColor="@color/white"
        android:layout_marginStart="25dp"
        android:layout_height="wrap_content">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:text="@string/confirmation"
                    android:textAlignment="center"
                    android:textColor="@color/purple_500"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="10dp"
                    android:src="@drawable/ic_exclamation_fill"
                    app:tint="@color/purple_500" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/do_you_want_to_archive"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="20dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/dailog_yes_btn"
                        android:layout_width="0dp"
                        android:layout_height="48dp"
                        android:layout_weight="1"
                        android:background="@drawable/square_boreder_linear"
                        android:gravity="center"
                        android:paddingLeft="10dp"
                        android:text="@string/yes"
                        android:textAlignment="center"
                        android:textColor="@color/black"

                        android:textSize="20dp"
                        tools:ignore="RtlCompat" />

                    <TextView
                        android:id="@+id/dailog_no_btn"

                        android:layout_width="0dp"
                        android:layout_height="48dp"
                        android:layout_weight="1"
                        android:background="@drawable/square_boreder_linear"
                        android:gravity="center"
                        android:paddingLeft="10dp"
                        android:text="@string/no"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="20dp"
                        android:textStyle="normal"
                        tools:ignore="RtlCompat" />

                </LinearLayout>


            </LinearLayout>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>


</RelativeLayout>