<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp">

            <RelativeLayout

                android:id="@+id/bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginEnd="20dp">

                <ImageButton
                    android:id="@+id/menubtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:background="@android:color/transparent"
                    android:padding="10dp"
                    android:src="@drawable/ic_baseline_menu_24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_toEndOf="@id/menubtn"
                    android:text="@string/all_food"
                    android:textColor="@color/black"
                    android:textSize="36dp"
                    android:textStyle="bold" />


                <!--                <LinearLayout-->
                <!--                    android:orientation="horizontal"-->
                <!--                    android:layout_width="wrap_content"-->
                <!--                    android:layout_height="30dp"-->
                <!--                    android:layout_alignParentEnd="true"-->
                <!--                    android:layout_centerInParent="true">-->

                <!--                    <ImageView-->
                <!--                        android:id="@+id/sale_items_btn"-->
                <!--                        android:layout_marginStart="10dp"-->
                <!--                        android:layout_marginEnd="8dp"-->
                <!--                        android:layout_width="28dp"-->
                <!--                        android:layout_marginTop="2dp"-->
                <!--                        android:layout_gravity="center"-->
                <!--                        android:layout_height="26dp"-->
                <!--                        android:src="@drawable/ic_shopping"-->
                <!--                        />-->

                <!--                    <ImageView-->
                <!--                        android:id="@+id/archive_items_btn"-->
                <!--                        android:layout_marginStart="10dp"-->
                <!--                        android:layout_marginEnd="14dp"-->
                <!--                        android:layout_width="26dp"-->
                <!--                        android:layout_gravity="center"-->
                <!--                        android:layout_height="24dp"-->
                <!--                        android:src="@drawable/ic_archives"-->
                <!--                        />-->

                <!--                    <ImageView-->
                <!--                        android:id="@+id/logout_btn"-->
                <!--                        android:layout_width="30dp"-->
                <!--                        android:layout_height="30dp"-->
                <!--                        android:src="@drawable/ic_logout" />-->

                <!--                </LinearLayout>-->


            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/second_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/bar"
                android:layout_marginTop="10dp">

                <!--                <RelativeLayout-->
                <!--                    android:id="@+id/upload_screen_btn"-->
                <!--                    android:layout_width="80dp"-->
                <!--                    android:layout_height="55dp"-->
                <!--                    android:layout_alignParentEnd="true"-->
                <!--                    android:layout_marginTop="10dp"-->
                <!--                    android:layout_marginBottom="10dp"-->
                <!--                    android:background="@drawable/blue_drawablr">-->

                <!--                    <ImageView-->
                <!--                        android:layout_width="27dp"-->
                <!--                        android:layout_height="27dp"-->
                <!--                        android:layout_centerInParent="true"-->
                <!--                        android:src="@drawable/ic_settinglines" />-->
                <!--                </RelativeLayout>-->


                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_alignParentStart="true"
                    android:layout_gravity="center"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/borderdark"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/search_items_textview"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="10dp"
                            android:background="@color/transparent"
                            android:hint="@string/search_food_items"
                            android:textAlignment="viewStart"
                            android:textColor="@color/black"
                            android:textSize="16dp" />


                    </LinearLayout>

                </androidx.cardview.widget.CardView>


            </RelativeLayout>


            <LinearLayout
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/vegetable"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:background="@drawable/round_corner"
                    android:padding="5dp"
                    android:text="@string/vegetable"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/fruit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:background="@drawable/round_corner"
                    android:padding="5dp"
                    android:text="@string/fruit"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/fast"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:background="@drawable/round_corner"
                    android:padding="5dp"
                    android:text="@string/fast_food"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/milk"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:background="@drawable/round_corner"
                    android:padding="5dp"
                    android:text="@string/milk"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/meat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:background="@drawable/round_corner"
                    android:padding="5dp"
                    android:text="@string/meat"
                    android:textColor="@color/black" />

                <!--                    <TextView-->
                <!--                        android:id="@+id/clearfilter"-->
                <!--                        android:layout_width="wrap_content"-->
                <!--                        android:layout_height="wrap_content"-->
                <!--                        android:layout_marginEnd="5dp"-->
                <!--                        android:background="@drawable/round_corner"-->
                <!--                        android:backgroundTint="@color/design_default_color_error"-->
                <!--                        android:padding="5dp"-->
                <!--                        android:text="clear"-->
                <!--                        android:textColor="@color/white" />-->


            </LinearLayout>


            <HorizontalScrollView
                android:scrollbars="none"
                android:id="@+id/horizontal"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_below="@+id/second_layout"
                android:layout_centerHorizontal="true"
                android:layout_marginRight="10dp"
                android:paddingLeft="10dp"
                android:layout_marginStart="10dp">


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:paddingRight="10dp"

                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/movies"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:background="@drawable/round_corner"
                        android:padding="5dp"
                        android:text="@string/MoviesShows"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/shoping"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:background="@drawable/round_corner"
                        android:padding="5dp"
                        android:text="@string/Shopping"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/restuarent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:background="@drawable/round_corner"
                        android:padding="5dp"
                        android:text="@string/RestaurantFastFood"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/other"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:background="@drawable/round_corner"
                        android:padding="5dp"
                        android:text="@string/Other"

                        android:textColor="@color/black" />


                    <!--                    <TextView-->
                    <!--                        android:id="@+id/clearfilter"-->
                    <!--                        android:layout_width="wrap_content"-->
                    <!--                        android:layout_height="wrap_content"-->
                    <!--                        android:layout_marginEnd="5dp"-->
                    <!--                        android:background="@drawable/round_corner"-->
                    <!--                        android:backgroundTint="@color/design_default_color_error"-->
                    <!--                        android:padding="5dp"-->
                    <!--                        android:text="clear"-->
                    <!--                        android:textColor="@color/white" />-->


                </LinearLayout>

            </HorizontalScrollView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/food_item_recycler"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/horizontal"
                android:layout_marginTop="10dp"
                tools:itemCount="3"
                android:layout_above="@id/adView"
                android:paddingBottom="20dp"
                android:clipToPadding="false"
                tools:listitem="@layout/child_food" />


            <com.google.android.gms.ads.AdView
                xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:id="@+id/adView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                ads:adSize="BANNER"
                ads:adUnitId="@string/admob_banner"/>
        </RelativeLayout>


    </LinearLayout>

    <RelativeLayout
        android:id="@+id/progress_bar_layout_dashboard"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <com.github.ybq.android.spinkit.SpinKitView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/spin_kit"
            style="@style/SpinKitView.Large.WanderingCubes"
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            app:SpinKit_Color="#9096BC" />

    </RelativeLayout>
</RelativeLayout>